[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/Microscopio.gd" type="Script" id=1]
[ext_resource path="res://scripts/botoesGenerico.gd" type="Script" id=2]
[ext_resource path="res://scripts/Label_Sequencia.gd" type="Script" id=3]
[ext_resource path="res://cenas/Tempo.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/AdicionarFrasco.tscn" type="PackedScene" id=5]
[ext_resource path="res://fontes-e-temas/renascença.tres" type="Theme" id=6]
[ext_resource path="res://sprites/bancada@3x.png" type="Texture" id=7]
[ext_resource path="res://sprites/microscopio.png" type="Texture" id=8]
[ext_resource path="res://sprites/botões/contaGotas_pressed.png" type="Texture" id=9]
[ext_resource path="res://sprites/botões/btn_mic_disabled.png" type="Texture" id=10]
[ext_resource path="res://sprites/botões/contaGotas.png" type="Texture" id=11]
[ext_resource path="res://sprites/botões/btn_mic_hover.png" type="Texture" id=12]
[ext_resource path="res://sprites/botões/contaGotas_hover.png" type="Texture" id=13]
[ext_resource path="res://sprites/botões/btn_mic.png" type="Texture" id=14]
[ext_resource path="res://sprites/placona.png" type="Texture" id=15]
[ext_resource path="res://sprites/papel_de_parede.png" type="Texture" id=16]
[ext_resource path="res://fontes-e-temas/Macondo-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://addons/paulloz.colorblindness/colorblindness.gd" type="Script" id=18]
[ext_resource path="res://cenas/Caderno.tscn" type="PackedScene" id=19]

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 2
outline_color = Color( 0.623529, 0.188235, 0.188235, 1 )
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.721569, 0.223529, 0.223529, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 7
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.584314, 0.580392, 0.580392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 7
expand_margin_top = 1.0

[node name="Cenário Pasteur" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cor do Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.670588, 0.635294, 0.54902, 1 )

[node name="papel de parede" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.34902, 0.160784, 0.121569 )
position = Vector2( 512, 300 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="Sequência de Ação" type="Label" parent="."]
margin_left = 4.0
margin_top = 6.0
margin_right = 132.0
margin_bottom = 41.0
text = "Sequência de Ações"
script = ExtResource( 3 )

[node name="Tempo" parent="." instance=ExtResource( 4 )]
margin_left = 103.0
margin_top = 102.0
margin_right = 103.0
margin_bottom = 102.0

[node name="Bancada" type="Node2D" parent="."]

[node name="BancadaSprite" type="Sprite" parent="Bancada"]
position = Vector2( 342.5, 499.25 )
scale = Vector2( 0.32619, 0.321429 )
texture = ExtResource( 7 )

[node name="Add 3" parent="Bancada" instance=ExtResource( 5 )]
position = Vector2( 554, 400 )
nome_frasco = "Frasco 3"

[node name="Add 2" parent="Bancada" instance=ExtResource( 5 )]
position = Vector2( 401, 400 )
nome_frasco = "Frasco 2"

[node name="Add 1" parent="Bancada" instance=ExtResource( 5 )]
position = Vector2( 250, 400 )
nome_frasco = "Frasco 1"

[node name="Microscopio" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -599.0
margin_bottom = -599.0
script = ExtResource( 1 )

[node name="dim" type="ColorRect" parent="Microscopio"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -6.0
margin_right = 1054.0
margin_bottom = 609.0
color = Color( 0, 0, 0, 0.415686 )

[node name="SpriteMicro" type="TextureButton" parent="Microscopio" groups=["Botoes"]]
anchor_bottom = 1.0
margin_left = 59.0
margin_top = 260.0
margin_right = 136.0
margin_bottom = 401.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 8 )
expand = true
flip_h = true
script = ExtResource( 2 )

[node name="Botao Micro" type="TextureButton" parent="Microscopio" groups=["Botoes"]]
margin_left = 50.0
margin_top = 469.0
margin_right = 153.0
margin_bottom = 572.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 10 )
flip_h = true
script = ExtResource( 2 )

[node name="Selecione" type="NinePatchRect" parent="Microscopio"]
margin_left = 246.0
margin_top = 42.0
margin_right = 563.0
margin_bottom = 142.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 15 )
patch_margin_left = 53
patch_margin_top = 50
patch_margin_right = 52
patch_margin_bottom = 50

[node name="Selecione" type="Label" parent="Microscopio/Selecione"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -11.0
margin_right = 112.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 6 )
text = "Selecione uma amostra"
align = 1
valign = 1

[node name="Remover" type="Button" parent="Microscopio/Selecione"]
margin_left = -5.0
margin_top = -1.0
margin_right = 29.0
margin_bottom = 31.0
rect_rotation = -3.50888
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.768627, 0.690196, 0.596078, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "X"

[node name="Frasco 1" type="TextureButton" parent="Microscopio"]
margin_left = 235.0
margin_top = 167.0
margin_right = 278.0
margin_bottom = 262.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Frasco 2" type="TextureButton" parent="Microscopio"]
margin_left = 386.0
margin_top = 167.0
margin_right = 429.0
margin_bottom = 262.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Frasco 3" type="TextureButton" parent="Microscopio"]
margin_left = 539.0
margin_top = 167.0
margin_right = 582.0
margin_bottom = 262.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 13 )
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Observando" type="Node2D" parent="CanvasLayer"]
z_index = 310

[node name="PopUp" type="Popup" parent="CanvasLayer/Observando"]
unique_name_in_owner = true
margin_left = 1101.0
margin_top = 257.0
margin_right = 1363.0
margin_bottom = 321.0
theme = ExtResource( 6 )

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Observando/PopUp"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
patch_margin_left = 59
patch_margin_top = 49
patch_margin_right = 52
patch_margin_bottom = 53

[node name="EstadoFrasco" type="Label" parent="CanvasLayer/Observando/PopUp"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.526
margin_top = 20.0
margin_bottom = -13.664
size_flags_horizontal = 3
size_flags_vertical = 6
text = "FSAGFGGGSG"
align = 1
valign = 1

[node name="Colorblindness" type="CanvasLayer" parent="."]
script = ExtResource( 18 )

[node name="Caderno" parent="." instance=ExtResource( 19 )]
position = Vector2( 696, 80 )

[connection signal="button_up" from="Microscopio/SpriteMicro" to="Microscopio" method="ObservarFrasco"]
[connection signal="button_up" from="Microscopio/Botao Micro" to="Microscopio" method="ObservarFrasco"]
[connection signal="button_up" from="Microscopio/Selecione/Remover" to="Microscopio" method="DesistirMicro"]
[connection signal="button_up" from="Microscopio/Frasco 1" to="Microscopio" method="MostrarResultado" binds= [ "Frasco 1" ]]
[connection signal="button_up" from="Microscopio/Frasco 2" to="Microscopio" method="MostrarResultado" binds= [ "Frasco 2" ]]
[connection signal="button_up" from="Microscopio/Frasco 3" to="Microscopio" method="MostrarResultado" binds= [ "Frasco 3" ]]
